--- a/septa-fare-calculator/index.html
+++ b/septa-fare-calculator/index.html
@@ -5,6 +5,8 @@
 	<title>SEPTA Regional Rail Fare Calculator</title>
 </head>
 <body>
-	
+	<h1>Hello world!!</h1>
+	<div id="root"></div>
+	<script type="module" src="/src/index.jsx"></script>
 </body>
 </html>
